src/objects/Charket__WeChatMessageAttachment__c.object
<CustomObject>
    <fields>
        <fullName>Charket__AttachmentId__c</fullName>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__ContentType__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charket__DownloadUrl__c</fullName>
        <label>Download URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__HDAudioUrl__c</fullName>
        <label>HD Audio URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Charket__ImageUrl__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Charket__IsShowCoverImage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Cover Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__MessageType__c</fullName>
        <formula>TEXT(Charket__WeChatMessage__r.Charket__Type__c)</formula>
        <label>Message Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Order__c</fullName>
        <inlineHelpText>The bigger the order number, the more forward to display.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__SDAudioUrl__c</fullName>
        <label>SD Audio URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Charket__StructuredMessageContent__c</fullName>
        <label>Structured Message Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Charket__StructuredMessageLongUrl__c</fullName>
        <label>Structured Message Long URL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__StructuredMessagePlainContent__c</fullName>
        <label>Structured Message Plain Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__StructuredMessageSourceLongUrl__c</fullName>
        <label>Structured Message Source Long URL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__StructuredMessageSourceUrl__c</fullName>
        <label>Structured Message Source URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Charket__StructuredMessageUrl__c</fullName>
        <inlineHelpText>The address that picture links to.</inlineHelpText>
        <label>Structured Message URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Charket__Title__c</fullName>
        <label>Title</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatMediaId__c</fullName>
        <externalId>true</externalId>
        <label>WeChat Media ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatMessage__c</fullName>
        <label>WeChat Message</label>
        <referenceTo>Charket__WeChatMessage__c</referenceTo>
        <relationshipLabel>WeChat Message Attachments</relationshipLabel>
        <relationshipName>WeChatMessageAttachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatThumbnailId__c</fullName>
        <externalId>true</externalId>
        <label>WeChat Thumbnail ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WeChat Message Attachment</label>
    <nameField>
        <displayFormat>WMA-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Message Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>